// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityDetailPage should render correctly 1`] = `
<div>
  <div
    class="entity-detail"
  >
    <div
      class="entity-detail__title-wrap"
    >
      <h2
        class="entity-detail__title"
      >
        Unit test
      </h2>
    </div>
    <div
      class="entity-detail__img-wrap"
    >
      <img
        alt="Unit test"
        class="entity-detail__img"
        src="/test"
      />
    </div>
    <div
      class="entity-detail__title-wrap"
    >
      <h2
        class="entity-detail__title"
      >
        Characteristics
      </h2>
    </div>
    <div
      class="entity-detail__spec detail-spec-table"
    >
      <table
        class="detail-spec-table__table"
      >
        <tbody>
          <tr>
            <td>
              test
            </td>
            <td>
              value
            </td>
          </tr>
          <tr>
            <td>
              test2
            </td>
            <td>
              value 2
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <span>
      children
    </span>
  </div>
</div>
`;

exports[`EntityDetailPage should render correctly without optional params 1`] = `
<div>
  <div
    class="entity-detail"
  >
    <div
      class="entity-detail__title-wrap"
    >
      <h2
        class="entity-detail__title"
      >
        Unit test
      </h2>
    </div>
    <div
      class="entity-detail__img-wrap"
    >
      <img
        alt="Unit test"
        class="entity-detail__img"
        src="/test"
      />
    </div>
  </div>
</div>
`;
